--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
